docs/apache-airflow-providers-cncf-kubernetes/6.0.0/_sources/_api/airflow/providers/cncf/kubernetes/python_kubernetes_script/index.rst.txt
:py:mod:`airflow.providers.cncf.kubernetes.python_kubernetes_script`
====================================================================

.. py:module:: airflow.providers.cncf.kubernetes.python_kubernetes_script

.. autoapi-nested-parse::

   Utilities for using the kubernetes decorator



Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.cncf.kubernetes.python_kubernetes_script.remove_task_decorator
   airflow.providers.cncf.kubernetes.python_kubernetes_script.write_python_script



.. py:function:: remove_task_decorator(python_source, task_decorator_name)

   Removes @task.kubernetes or similar as well as @setup and @teardown

   :param python_source: python source code
   :param task_decorator_name: the task decorator name


.. py:function:: write_python_script(jinja_context, filename, render_template_as_native_obj = False)

   Renders the python script to a file to execute in the virtual environment.

   :param jinja_context: The jinja context variables to unpack and replace with its placeholders in the
       template file.
   :param filename: The name of the file to dump the rendered script to.
   :param render_template_as_native_obj: If ``True``, rendered Jinja template would be converted
       to a native Python object


